# WisskiPathGenerator

./: .gitignore  README.md  main.py  pyproject.toml  read_paths.py
data/: dev_20250319T160535.xml  pathspec.txt
src/: read_paths.py
src/wisski_path_generator/: read_paths.py  wisski_path.py
src/wisski_pathbuilder/: Pathbuilder.py
