[project]
name = "wisski_path_generator"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Tara L. Andrews", email = "tla@mit.edu" }
]
requires-python = ">=3.11"
dependencies = [
    "lxml>=5.3.1",
    "rdflib>=7.1.3",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/wisski_path_generator"]